[package]
name = "unix-rs"
version = "0.1.0"
edition = "2021"
another = "Green"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread-id = "4.0.0"
libc = "0.2"
cfg-if = "0.1"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"